add_executable(bst basic_tree.c)
add_executable(rbt rb_tree.c)
add_executable(bt btree.c)

target_include_directories(bst PRIVATE ../include ../lib)
target_link_libraries(bst treelib)
target_include_directories(rbt PRIVATE ../include ../lib)
target_link_libraries(rbt treelib)
target_include_directories(bt PRIVATE ../include ../lib)
target_link_libraries(bt treelib)

add_test(NAME basic_tree COMMAND bst 88 11 33 46 79 23 55 1 2 5 10 80 83 92 66 77)
add_test(NAME rb_tree COMMAND rbt 88 11 33 46 79 23 55 1 2 5 10 80 83 92 66 77)
add_test(NAME btree00 COMMAND bt 4 88 11 33 46 79 23 55 1 2 5 10 80 83 92 66 77 99 100 21 17 43)
add_test(NAME btree01 COMMAND bt 4 88 11 33 46 79 23 55 21 17 43 1 2 5 10 80 83 92 66 77 99 100)
add_test(NAME btree02 COMMAND bt 4 88 11 92 66 77 99 33 46 79 23 1 2 5 10 80 83 55 21 17 43 100) 
add_test(NAME btree03 COMMAND bt 5 88 11 33 46 79 23 55 1 2 5 10 80 83 92 66 77 99 100 21 17 43) 
add_test(NAME btree04 COMMAND bt 5 88 11 33 46 79 23 55 100 21 17 43 1 2 5 10 80 83 92 66 77 99) 
add_test(NAME btree05 COMMAND bt 5 88 1 2 5 10 11 33 46 79 23 55 80 77 99 100 21 83 92 66 17 43)